--- a/MultiDBsVisServerAPI/pom.xml
+++ b/MultiDBsVisServerAPI/pom.xml
@@ -55,6 +55,19 @@
 			<artifactId>jetty-servlet</artifactId>
 			<version>${jettyVersion}</version>
 		</dependency>
+		
+		<dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsutils</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsvisserver</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
 
 	</dependencies>
 </project>
