--- a/MultiDBsVisServer/pom.xml
+++ b/MultiDBsVisServer/pom.xml
@@ -23,6 +23,71 @@
 	     <groupId>mysql</groupId>
 	     <artifactId>mysql-connector-java</artifactId>
 	     <version>5.1.29</version>
-       </dependency> 
+       </dependency>
+       
+        <dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>docker-utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+    	</dependency>
+       
+       <dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>docker-utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+		    <type>test-jar</type>
+		    <scope>test</scope>
+    	</dependency>
+    	
+    	<dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+		    <type>test-jar</type>
+		    <scope>test</scope>
+    	</dependency>
+    	
+    	<dependency>
+	       <groupId>org.hibernate</groupId>
+	       <artifactId>hibernate-core</artifactId>
+	       <version>4.3.4.Final</version>
+        </dependency>
+        
+        <dependency>
+	       <groupId>org.hibernate.javax.persistence</groupId>
+	       <artifactId>hibernate-jpa-2.1-api</artifactId>
+	       <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+	      <groupId>org.hibernate</groupId>
+	      <artifactId>hibernate-c3p0</artifactId>
+	      <version>4.3.4.Final</version>
+        </dependency>
+        
+        <dependency>
+	      <groupId>org.hibernate.common</groupId>
+	      <artifactId>hibernate-commons-annotations</artifactId>
+	      <version>4.0.4.Final</version>
+        </dependency>
+        
+        <dependency>
+	      <groupId>org.jboss.spec.javax.transaction</groupId>
+	      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+	      <version>1.0.0.Final</version>
+       </dependency>
+        
+        <dependency>
+	      <groupId>org.jboss.logging</groupId>
+	      <artifactId>jboss-logging</artifactId>
+	      <version>3.1.3.GA</version>
+        </dependency>
+        
+        <dependency>
+	      <groupId>org.jboss.logging</groupId>
+	      <artifactId>jboss-logging-annotations</artifactId>
+	      <version>1.2.0.Beta1</version>
+        </dependency>
+        
 	</dependencies>
 </project>
