--- a/MultiDBsVisServer/pom.xml
+++ b/MultiDBsVisServer/pom.xml
@@ -89,5 +89,11 @@
 	      <version>1.2.0.Beta1</version>
         </dependency>
         
+       <dependency>
+	     <groupId>com.google.code.gson</groupId>
+	     <artifactId>gson</artifactId>
+	     <version>2.3</version>
+       </dependency>
+       
 	</dependencies>
 </project>
