--- a/MultiDBsVisServerAPI/pom.xml
+++ b/MultiDBsVisServerAPI/pom.xml
@@ -43,18 +43,6 @@
 			<!-- use the following artifactId if you don't need servlet 2.x compatibility -->
 			<!-- artifactId>jersey-container-servlet</artifactId -->
 		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>${jettyVersion}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>${jettyVersion}</version>
-		</dependency>
 		
 		<dependency>
 	       <groupId>edu.pitt.sis.infsci2711</groupId>
@@ -68,6 +56,17 @@
 	       <version>0.1-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+	      <groupId>com.wordnik</groupId>
+	      <artifactId>swagger-core_2.10</artifactId>
+	      <version>1.3.7</version>
+        </dependency>
+        
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.6.4</version>
+        </dependency>
 
 	</dependencies>
 </project>
