--- a/MultiDBsVisServer/src/main/resources/config_default.properties
+++ b/MultiDBsVisServer/src/main/resources/config_default.properties
@@ -9,7 +9,7 @@ colfusion.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 # Automatically validates or exports schema DDL to the database when the SessionFactory is created. 
 # With create-drop, the database schema will be dropped when the SessionFactory is closed explicitly.
 # validate | update | create | create-drop
-colfusion.hibernate.hbm2ddl.auto = create
+colfusion.hibernate.hbm2ddl.auto = update
 
 colfusion.hibernate.connection.zeroDateTimeBehavior = convertToNull
   
