--- a/MultiDBsVisServerAPI/pom.xml
+++ b/MultiDBsVisServerAPI/pom.xml
@@ -34,14 +34,14 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<dependencies>
+	<!-- <dependencies>
 
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
 			<version>${jersey.version}</version>
-			<!-- use the following artifactId if you don't need servlet 2.x compatibility -->
-			<!-- artifactId>jersey-container-servlet</artifactId -->
+			use the following artifactId if you don't need servlet 2.x compatibility
+			artifactId>jersey-container-servlet</artifactId
 		</dependency>
 
 		<dependency>
@@ -68,6 +68,88 @@
 	       <version>0.1-SNAPSHOT</version>
         </dependency>
         
+        
 
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>${jersey.version}</version>
+			use the following artifactId if you don't need servlet 2.x compatibility
+			artifactId>jersey-container-servlet</artifactId
+		</dependency>
+		
+		<dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsutils</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsvisserver</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	      <groupId>com.wordnik</groupId>
+	      <artifactId>swagger-core_2.10</artifactId>
+	      <version>1.3.7</version>
+        </dependency>
+        
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.6.4</version>
+       </dependency>
+
+	
+        
+
+	</dependencies> -->
+	<dependencies>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>${jersey.version}</version>
+			<!-- use the following artifactId if you don't need servlet 2.x compatibility -->
+			<!-- artifactId>jersey-container-servlet</artifactId -->
+		</dependency>
+		
+		<dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsutils</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	       <groupId>edu.pitt.sis.infsci2711</groupId>
+	       <artifactId>multidbsvisserver</artifactId>
+	       <version>0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	      <groupId>com.wordnik</groupId>
+	      <artifactId>swagger-core_2.10</artifactId>
+	      <version>1.3.7</version>
+        </dependency>
+        
+        <!-- <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.6.4</version>
+          <exclusions>
+	    <exclusion>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-nop</artifactId>
+	    </exclusion>
+	
+	<exclusion>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-simple</artifactId>
+	    </exclusion>
+	</exclusions>
+        </dependency>
+ -->
 	</dependencies>
 </project>
