--- a/MultiDBsVisServer/pom.xml
+++ b/MultiDBsVisServer/pom.xml
@@ -36,6 +36,28 @@
        	<artifactId>swagger-core_2.10</artifactId>
        	<version>1.3.7</version>
        </dependency>
+       
+        <dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>docker-utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+    	</dependency>
+       
+       <dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>docker-utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+		    <type>test-jar</type>
+		    <scope>test</scope>
+    	</dependency>
+    	
+    	<dependency>
+      		<groupId>edu.pitt.sis.exp.colfusion</groupId>
+		    <artifactId>utils</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+		    <type>test-jar</type>
+		    <scope>test</scope>
+    	</dependency>
     	
     	<dependency>
 	       <groupId>org.hibernate</groupId>
@@ -163,4 +185,5 @@
         
         
 	</dependencies>
+	
 </project>
