--- a/MultiDBsVisServerAPI/pom.xml
+++ b/MultiDBsVisServerAPI/pom.xml
@@ -19,7 +19,7 @@
 
 		<jersey.version>2.5.1</jersey.version>
 
-		<jettyVersion>9.2.3.v20140905</jettyVersion>
+		<!-- <jettyVersion>9.2.3.v20140905</jettyVersion> -->
 	</properties>
 
 	<dependencyManagement>
@@ -34,78 +34,6 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<!-- <dependencies>
-
-		<dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-servlet-core</artifactId>
-			<version>${jersey.version}</version>
-			use the following artifactId if you don't need servlet 2.x compatibility
-			artifactId>jersey-container-servlet</artifactId
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>${jettyVersion}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>${jettyVersion}</version>
-		</dependency>
-		
-		<dependency>
-	       <groupId>edu.pitt.sis.infsci2711</groupId>
-	       <artifactId>multidbsutils</artifactId>
-	       <version>0.1-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-	       <groupId>edu.pitt.sis.infsci2711</groupId>
-	       <artifactId>multidbsvisserver</artifactId>
-	       <version>0.1-SNAPSHOT</version>
-        </dependency>
-        
-        
-
-		<dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-servlet-core</artifactId>
-			<version>${jersey.version}</version>
-			use the following artifactId if you don't need servlet 2.x compatibility
-			artifactId>jersey-container-servlet</artifactId
-		</dependency>
-		
-		<dependency>
-	       <groupId>edu.pitt.sis.infsci2711</groupId>
-	       <artifactId>multidbsutils</artifactId>
-	       <version>0.1-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-	       <groupId>edu.pitt.sis.infsci2711</groupId>
-	       <artifactId>multidbsvisserver</artifactId>
-	       <version>0.1-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-	      <groupId>com.wordnik</groupId>
-	      <artifactId>swagger-core_2.10</artifactId>
-	      <version>1.3.7</version>
-        </dependency>
-        
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-simple</artifactId>
-          <version>1.6.4</version>
-       </dependency>
-
-	
-        
-
-	</dependencies> -->
 	<dependencies>
 
 		<dependency>
@@ -134,22 +62,11 @@
 	      <version>1.3.7</version>
         </dependency>
         
-        <!-- <dependency>
+        <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-simple</artifactId>
           <version>1.6.4</version>
-          <exclusions>
-	    <exclusion>
-	        <groupId>org.slf4j</groupId>
-	        <artifactId>slf4j-nop</artifactId>
-	    </exclusion>
-	
-	<exclusion>
-	        <groupId>org.slf4j</groupId>
-	        <artifactId>slf4j-simple</artifactId>
-	    </exclusion>
-	</exclusions>
         </dependency>
- -->
+
 	</dependencies>
 </project>
