--- a/MultiDBsVisServer/pom.xml
+++ b/MultiDBsVisServer/pom.xml
@@ -24,6 +24,14 @@
 	     <artifactId>mysql-connector-java</artifactId>
 	     <version>5.1.29</version>
        </dependency>
+       
+       <dependency>
+	     <groupId>edu.pitt.sis.exp.colfusion</groupId>
+	     <artifactId>utils</artifactId>
+	     <version>0.1-SNAPSHOT</version>
+	     <type>test-jar</type>
+	     <scope>test</scope>
+       </dependency>
     	
     	<dependency>
 	       <groupId>org.hibernate</groupId>
