--- a/MultiDBsVisServer/src/main/resources/config_default.properties
+++ b/MultiDBsVisServer/src/main/resources/config_default.properties
@@ -1,27 +1,27 @@
-# Hibernate properties (don't rename these properties)
-colfusion.hibernate.connection.driver_class = com.mysql.jdbc.Driver
-colfusion.hibernate.connection.url = jdbc:mysql://localhost:3306/visualization
-colfusion.hibernate.connection.username = dataverse
-colfusion.hibernate.connection.password = dataverse
-colfusion.hibernate.default_catalog = visualization
-colfusion.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-
-# Automatically validates or exports schema DDL to the database when the SessionFactory is created. 
-# With create-drop, the database schema will be dropped when the SessionFactory is closed explicitly.
-# validate | update | create | create-drop
-colfusion.hibernate.hbm2ddl.auto = update
-
-colfusion.hibernate.connection.zeroDateTimeBehavior = convertToNull
-  
-colfusion.hibernate.c3p0.min_size = 5
-colfusion.hibernate.c3p0.max_size = 20
-colfusion.hibernate.c3p0.timeout = 300
-colfusion.hibernate.c3p0.max_statements = 50
-colfusion.hibernate.c3p0.idle_test_period = 300
-  
-# Enable Hibernate's automatic session context management
-colfusion.hibernate.current_session_context_class = thread
-# Display and format all executed SQL to stdout
-colfusion.hibernate.show_sql = false
-colfusion.hibernate.format_sql = true
-# END OF HIBERNATE PROPERTIES
+## Hibernate properties (don't rename these properties)
+#colfusion.hibernate.connection.driver_class = com.mysql.jdbc.Driver
+#colfusion.hibernate.connection.url = jdbc:mysql://localhost:3306/visualization
+#colfusion.hibernate.connection.username = dataverse
+#colfusion.hibernate.connection.password = dataverse
+#colfusion.hibernate.default_catalog = visualization
+#colfusion.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#
+## Automatically validates or exports schema DDL to the database when the SessionFactory is created. 
+## With create-drop, the database schema will be dropped when the SessionFactory is closed explicitly.
+## validate | update | create | create-drop
+#colfusion.hibernate.hbm2ddl.auto = update
+#
+#colfusion.hibernate.connection.zeroDateTimeBehavior = convertToNull
+#  
+#colfusion.hibernate.c3p0.min_size = 5
+#colfusion.hibernate.c3p0.max_size = 20
+#colfusion.hibernate.c3p0.timeout = 300
+#colfusion.hibernate.c3p0.max_statements = 50
+#colfusion.hibernate.c3p0.idle_test_period = 300
+#  
+## Enable Hibernate's automatic session context management
+#colfusion.hibernate.current_session_context_class = thread
+## Display and format all executed SQL to stdout
+#colfusion.hibernate.show_sql = false
+#colfusion.hibernate.format_sql = true
+## END OF HIBERNATE PROPERTIES
