Finalize all the codes

--- a/MultiDBsVisServer/src/main/resources/config_default.properties
+++ b/MultiDBsVisServer/src/main/resources/config_default.properties
@@ -1,6 +1,6 @@
 # Hibernate properties (don't rename these properties)
 colfusion.hibernate.connection.driver_class = com.mysql.jdbc.Driver
-colfusion.hibernate.connection.url = jdbc:mysql://localhost:3306/visualization
+colfusion.hibernate.connection.url = jdbc:mysql://localhost/visualization
 colfusion.hibernate.connection.username = dataverse
 colfusion.hibernate.connection.password = dataverse
 colfusion.hibernate.default_catalog = visualization
