added docker file and  changed config

--- a/MultiDBsVisServerAPI/src/main/resources/config.properties
+++ b/MultiDBsVisServerAPI/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 port = 7654
 
-# the IP and Port of the other project REST API
-metastore.rest.base = 54.152.26.131:7654
+# the IP and Port of the other project REST API 54.152.26.131:7654
+metastore.rest.base = http://192.168.59.103:37654
 visapi.rest.base = 54.173.71.235:7654
 #example of the a concrete exposed resources
 metastore.rest.getAllDatasources = /datasources
